# ambulance

./: .gitignore  MANUAL_SETUP.md  package-lock.json  package.json
demo/: presentation_script.md  qna_prep.md  run_both.sh  scenario_en.txt  scenario_ko.txt  scenario_runner.py
host_adk/: .env.example  pyproject.toml
host_adk/emergency_agent/: __init__.py
host_adk/emergency_agent/.adk/: session.db
host_adk/구급AI에이전트/: a2a_client.py  agent.py  audit.py  prompt.py
host_adk/구급AI에이전트/.adk/: session.db
교통AI에이전트/: .env.example  __main__.py  _lang.py  agent.py  agent_executor.py  prompt.py  pyproject.toml  server.js  slack_tool.py
교통AI에이전트/tools/: addressSearchByPlaceName.js  directionSearchByAddress.js  directionSearchByCoordinates.js  futureDirectionSearchByCoordinates.js  geocode.js  kakaoFetch.js  multiDestinationDirectionSearch.js  nearestEmergencyRooms.js
병원AI에이전트/: .env.example  __main__.py  agent.py  capacity.py  prompt.py  pyproject.toml
병원AI에이전트/configs/: 대전선병원.env  대전성모병원.env  대전한국병원.env
병원AI에이전트들/대전선병원AI에이전트/: __main__.py  agent.py  agent_executor.py  prompt.py
병원AI에이전트들/대전한국병원AI에이전트/: __main__.py  agent.py  agent_executor.py  prompt.py
보험AI에이전트/: .env.example  __main__.py  agent.py  agent_executor.py  insurance_tool.py  prompt.py  pyproject.toml
