# Insurance agent - verifies coverage and contacts the insurer via Slack.

[project]
name = "InsuranceAIAgent"
version = "0.2.0"
description = "An agent for verifying insurance coverage of an emergency patient"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a,db]>=2.3.0",
    # google-adk 2.3.0 pins a2a-sdk <0.4; track ADK's supported range.
    "a2a-sdk[http-server]>=0.3.4,<0.4",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "uvicorn>=0.35",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
]
